packages/core/src/styles/tabular.less
.gs-adjuster {
  padding: 0;
}

.gs-table {
  margin: 0;
}

.gs-tabular {
  overflow: auto;
  display: block;
  box-sizing: border-box;
  position: relative;
}

.gs-tabular-inner {
  overflow: hidden;
  &>table {
    table-layout: fixed;
    border-collapse: collapse;
    border-spacing: 0;
  }
}

.gs-th {
  z-index: 2;
  padding: 0;
  position: sticky;
  font-size: 13px;
  font-weight: normal;
  box-sizing: border-box;
  vertical-align: top;

  .gs-resizer {
    position: absolute;
    border-color: transparent;
    box-sizing: border-box;
    z-index: 2;

    &:hover {
      background-color: #0077ff;
    }

    &.gs-protected {
      display: none;
    }
  }
}

.gs-th-inner {
  height: 100%;
  box-sizing: border-box;
  vertical-align: middle;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}

.gs-th-inner-wrap {
  height: 100%;
  box-sizing: border-box;
  background-color: transparent;
}

.gs-th-top {
  top: 0;
  overflow: hidden;

  .gs-resizer {
    top: 0;
    right: 0;
    width: 3px;
    cursor: e-resize;

    &.gs-dragging {
      border-right-style: dotted;
      height: 1000000px !important;
      cursor: e-resize;
    }
  }
}

.gs-th-left {
  left: 0;
  overflow: hidden;
  min-width: 30px;
  border-top: solid 1px #ddd;

  .gs-resizer {
    left: 0;
    bottom: 0;
    height: 3px;
    cursor: n-resize;

    &.gs-dragging {
      border-bottom-style: dotted;
      width: 1000000px !important;
      cursor: n-resize;
    }
  }
}

.gs-th-top.gs-th-left {
  top: 0;
  left: 0;
  z-index: 3;
  border: none !important;
}

.gs-th-left.gs-filter-fixed .gs-th-inner::before {
  content: '‹\00a0';
}

.gs-th-left.gs-sort-fixed .gs-th-inner::after {
  content: '\00a0›';
}

.gs-col-addr {
  position: absolute;
  top: 2px;
  right: 4px;
  font-size: 9px;
  opacity: 0.5;
  line-height: 1;
  letter-spacing: 0.3px;
  pointer-events: none;
}

